--- a/app/src/main/res/layout/fragment_bulk_edit_apiary.xml
+++ b/app/src/main/res/layout/fragment_bulk_edit_apiary.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.BulkEditApiaryFragment">
+    tools:context=".ui.bulkedit.BulkEditApiaryFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -27,7 +27,7 @@
             android:id="@+id/text_view_bulk_edit_instructions"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="@string/only_filled_fields_will_be_updated_leave_fields_blank_to_keep_existing_values"
+            android:text="@string/bulk_edit_hives_info"
             android:textAppearance="?attr/textAppearanceCaption"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@id/text_view_selected_apiaries_count"
@@ -39,7 +39,7 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:hint="@string/apiary_location_hint"
+            android:hint="@string/hint_apiary_location"
             android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@id/text_view_bulk_edit_instructions"
             app:layout_constraintStart_toStartOf="parent"
@@ -56,7 +56,7 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:hint="@string/apiary_type_hint"
+            android:hint="@string/label_apiary_type"
             android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@id/text_input_layout_apiary_location"
             app:layout_constraintStart_toStartOf="parent"
@@ -73,7 +73,7 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:hint="@string/notes_hint"
+            android:hint="@string/hint_notes_optional"
             android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@id/text_input_layout_apiary_type"
             app:layout_constraintStart_toStartOf="parent"
@@ -92,7 +92,7 @@
             style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="@string/save_button"
+            android:text="@string/action_save"
             android:layout_marginTop="32dp"
             android:layout_marginEnd="8dp"
             app:layout_constraintTop_toBottomOf="@id/text_input_layout_notes"
@@ -104,7 +104,7 @@
             style="@style/Widget.MaterialComponents.Button.TextButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="@string/cancel_button"
+            android:text="@string/action_cancel"
             android:layout_marginTop="32dp"
             android:layout_marginStart="8dp"
             app:layout_constraintTop_toBottomOf="@id/text_input_layout_notes"
