--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -12,7 +12,7 @@
         android:id="@+id/switch_dark_mode"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="@string/dark_theme"
+        android:text="@string/setting_theme"
         android:textAppearance="?attr/textAppearanceSubtitle1"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,7 +23,7 @@
         style="@style/Widget.MaterialComponents.Button.OutlinedButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="@string/exit_app"
+        android:text="@string/title_exit_app"
         android:textColor="?attr/colorError"
         app:strokeColor="?attr/colorError"
         app:layout_constraintBottom_toBottomOf="parent"
