--- a/app/src/main/res/layout/fragment_apiary_detail.xml
+++ b/app/src/main/res/layout/fragment_apiary_detail.xml
@@ -8,7 +8,6 @@
     tools:context=".ui.apiarydetail.ApiaryDetailFragment"
     android:padding="16dp">
 
-    <!-- Apiary Location - Now constrained to the top -->
     <TextView
         android:id="@+id/text_view_apiary_location_detail"
         android:layout_width="0dp"
@@ -20,7 +19,6 @@
         app:layout_constraintEnd_toStartOf="@id/image_button_edit_apiary"
         tools:text="Kyiv Oblast, Ukraine" />
 
-    <!-- Apiary Type -->
     <TextView
         android:id="@+id/text_view_apiary_type_detail"
         android:layout_width="0dp"
@@ -33,7 +31,6 @@
         app:layout_constraintEnd_toStartOf="@id/image_button_edit_apiary"
         tools:text="Type: Stationary" />
 
-    <!-- Number of Hives in Apiary -->
     <TextView
         android:id="@+id/text_view_apiary_hives_count_detail"
         android:layout_width="0dp"
@@ -46,7 +43,6 @@
         app:layout_constraintEnd_toStartOf="@id/image_button_edit_apiary"
         tools:text="Hives: 10" />
 
-    <!-- Edit Apiary Button -->
     <ImageButton
         android:id="@+id/image_button_edit_apiary"
         android:layout_width="48dp"
@@ -56,9 +52,8 @@
         app:tint="?attr/colorAccent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:contentDescription="@string/edit_apiary_string" />
+        android:contentDescription="@string/content_description_edit_apiary" />
 
-    <!-- Separator Line -->
     <View
         android:id="@+id/separator_line"
         android:layout_width="0dp"
@@ -69,23 +64,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <!-- Search View for Hives -->
-    <!-- This SearchView is now removed from the layout and moved to the toolbar -->
-    <!--
-    <androidx.appcompat.widget.SearchView
-        android:id="@+id/search_view_hives"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/search_view_background"
-        app:iconifiedByDefault="false"
-        app:queryHint="Search hive number or notes..."
-        app:layout_constraintTop_toBottomOf="@id/separator_line"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-    -->
-
-    <!-- RecyclerView for Hives - Now constrained directly to the separator line -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view_hives"
         android:layout_width="0dp"
@@ -98,7 +76,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         tools:listitem="@layout/item_hive" />
 
-    <!-- Floating Action Button for adding a new hive -->
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab_add_hive"
         android:layout_width="wrap_content"
@@ -108,20 +85,18 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:tint="@android:color/white"
-        android:contentDescription="@string/add_new_hive" />
+        android:contentDescription="@string/content_description_add_hive" />
 
-    <!-- Empty state for hives list -->
-    <TextView
-        android:id="@+id/text_view_no_hives_yet"
+    <FrameLayout
+        android:id="@+id/empty_state_container"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/no_hives_added_yet_tap_to_add_one"
-        android:textAppearance="?attr/textAppearanceBody1"
-        android:textColor="?android:attr/textColorSecondary"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/separator_line">
+        <include layout="@layout/empty_state_view" />
+    </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
