--- a/app/src/main/res/layout/item_apiary.xml
+++ b/app/src/main/res/layout/item_apiary.xml
@@ -18,11 +18,10 @@
         android:layout_height="wrap_content"
         android:padding="16dp">
 
-        <!-- CheckBox for multi-selection -->
         <CheckBox
             android:id="@+id/checkbox_apiary_select"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:visibility="gone"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -30,7 +29,6 @@
             android:layout_marginEnd="8dp"
             tools:visibility="visible" />
 
-        <!-- Apiary Name -->
         <TextView
             android:id="@+id/text_view_apiary_name"
             android:layout_width="0dp"
@@ -42,7 +40,6 @@
             app:layout_constraintEnd_toStartOf="@id/image_button_edit"
             tools:text="My First Apiary" />
 
-        <!-- Apiary Location -->
         <TextView
             android:id="@+id/text_view_apiary_location"
             android:layout_width="0dp"
@@ -55,7 +52,6 @@
             app:layout_constraintEnd_toStartOf="@id/image_button_edit"
             tools:text="Kyiv Oblast, Ukraine" />
 
-        <!-- Number of Hives -->
         <TextView
             android:id="@+id/text_view_number_of_hives"
             android:layout_width="wrap_content"
@@ -67,7 +63,6 @@
             app:layout_constraintStart_toEndOf="@id/checkbox_apiary_select"
             tools:text="Hives: 10" />
 
-        <!-- Edit Button -->
         <ImageButton
             android:id="@+id/image_button_edit"
             android:layout_width="48dp"
@@ -77,7 +72,7 @@
             app:tint="?attr/colorAccent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:contentDescription="@string/edit_apiary_string_2"
+            android:contentDescription="@string/content_description_edit_apiary"
             android:visibility="visible" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
