--- a/app/src/main/res/menu/menu_main_overflow.xml
+++ b/app/src/main/res/menu/menu_main_overflow.xml
@@ -2,6 +2,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/action_settings"
-        android:title="@string/settings_title"
+        android:title="@string/title_settings"
         android:orderInCategory="200" />
 </menu>
