--- a/app/src/main/res/menu/menu_todo_list.xml
+++ b/app/src/main/res/menu/menu_todo_list.xml
@@ -5,35 +5,35 @@
     <item
         android:id="@+id/action_search_tasks"
         android:icon="@drawable/ic_search"
-        android:title="@string/search_label"
+        android:title="@string/label_search"
         app:actionViewClass="androidx.appcompat.widget.SearchView"
         app:showAsAction="ifRoom|collapseActionView" />
 
     <item
         android:id="@+id/action_select_all_tasks"
         android:icon="@drawable/ic_select_all"
-        android:title="@string/select_all_label"
+        android:title="@string/label_select_all"
         android:visible="false"
         app:showAsAction="always" />
 
     <item
         android:id="@+id/action_mark_complete_selected_tasks"
         android:icon="@drawable/ic_mark_complete"
-        android:title="@string/mark_as_complete_label"
+        android:title="@string/label_mark_as_complete"
         android:visible="false"
         app:showAsAction="always" />
 
     <item
         android:id="@+id/action_delete_selected_tasks"
         android:icon="@drawable/ic_delete"
-        android:title="@string/delete_selected_label"
+        android:title="@string/label_delete_selected"
         android:visible="false"
         app:showAsAction="always" />
 
     <item
         android:id="@+id/action_cancel_selection"
         android:icon="@drawable/ic_cancel"
-        android:title="@string/cancel_selection_label"
+        android:title="@string/label_cancel_selection"
         android:visible="false"
         app:showAsAction="always" />
 
