--- a/app/src/main/res/layout/fragment_bulk_edit_hive.xml
+++ b/app/src/main/res/layout/fragment_bulk_edit_hive.xml
@@ -225,7 +225,7 @@
             android:id="@+id/button_save_bulk_edit"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="@string/action_apply_changes"
+            android:text="@string/action_save"
             android:layout_marginTop="32dp"
             android:layout_marginEnd="8dp"
             app:layout_constraintTop_toBottomOf="@id/text_input_layout_hive_notes"
