--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -88,7 +88,7 @@
     <fragment
         android:id="@+id/bulkEditHiveFragment"
         android:name="com.stingsoftware.pasika.ui.bulkedit.BulkEditHiveFragment"
-        android:label="Bulk Edit Hives"
+        android:label="@string/title_bulk_edit_hives"
         tools:layout="@layout/fragment_bulk_edit_hive">
         <argument
             android:name="hiveIds"
@@ -98,7 +98,7 @@
     <fragment
         android:id="@+id/inspectionListFragment"
         android:name="com.stingsoftware.pasika.ui.inspectionlist.InspectionListFragment"
-        android:label="Inspections for Hive #{hiveNumber}"
+        android:label="string/title_inspections_for_hive"
         tools:layout="@layout/fragment_inspection_list">
         <argument
             android:name="hiveId"
@@ -132,8 +132,8 @@
 
     <fragment
         android:id="@+id/bulkEditApiaryFragment"
-        android:name="com.stingsoftware.pasika.ui.BulkEditApiaryFragment"
-        android:label="Bulk Edit Apiaries"
+        android:name="com.stingsoftware.pasika.ui.bulkedit.BulkEditApiaryFragment"
+        android:label="@string/title_bulk_edit_apiaries"
         tools:layout="@layout/fragment_bulk_edit_apiary">
         <argument
             android:name="apiaryIds"
@@ -143,7 +143,7 @@
     <fragment
         android:id="@+id/todoListFragment"
         android:name="com.stingsoftware.pasika.todo.TodoListFragment"
-        android:label="To-Do List"
+        android:label="@string/to_do"
         tools:layout="@layout/fragment_todo_list">
         <action
             android:id="@+id/action_todoListFragment_to_addEditTaskFragment"
