--- a/app/src/main/res/menu/menu_inspection_list.xml
+++ b/app/src/main/res/menu/menu_inspection_list.xml
@@ -3,6 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/action_search_inspection"
+        android:icon="@drawable/ic_search"
+        android:title="@string/label_search"
+        android:orderInCategory="20"
+        app:actionViewClass="androidx.appcompat.widget.SearchView"
+        app:showAsAction="ifRoom|collapseActionView" />
+
+    <item
         android:id="@+id/action_export_csv"
         android:title="@string/action_export_to_csv"
         android:icon="@drawable/ic_export"
