--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -14,6 +14,17 @@
             android:icon="@drawable/ic_language" />
     </group>
 
+    <!-- START: New Contacts Section -->
+    <item android:title="@string/contact_title">
+        <menu>
+            <item
+                android:id="@+id/drawer_email"
+                android:title="@string/contact_email_address"
+                android:icon="@drawable/ic_email" />
+        </menu>
+    </item>
+    <!-- END: New Contacts Section -->
+
     <item android:title="@string/category_application">
         <menu>
             <item
