--- a/app/src/main/res/layout/item_apiary.xml
+++ b/app/src/main/res/layout/item_apiary.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/apiary_card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
-    app:cardCornerRadius="8dp"
-    app:cardElevation="4dp"
     android:clickable="true"
     android:focusable="true"
-    android:foreground="?attr/selectableItemBackground">
+    android:foreground="?attr/selectableItemBackground"
+    app:cardCornerRadius="8dp"
+    app:cardElevation="4dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -22,11 +21,11 @@
             android:id="@+id/checkbox_apiary_select"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
+            android:layout_marginEnd="8dp"
             android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginEnd="8dp"
             tools:visibility="visible" />
 
         <TextView
@@ -35,32 +34,43 @@
             android:layout_height="wrap_content"
             android:textAppearance="?attr/textAppearanceHeadline6"
             android:textColor="?android:attr/textColorPrimary"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toEndOf="@id/checkbox_apiary_select"
             app:layout_constraintEnd_toStartOf="@id/image_button_edit"
+            app:layout_constraintStart_toEndOf="@id/checkbox_apiary_select"
+            app:layout_constraintTop_toTopOf="parent"
             tools:text="My First Apiary" />
 
         <TextView
             android:id="@+id/text_view_apiary_location"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
             android:textAppearance="?attr/textAppearanceBody2"
             android:textColor="?android:attr/textColorSecondary"
-            android:layout_marginTop="4dp"
-            app:layout_constraintTop_toBottomOf="@id/text_view_apiary_name"
-            app:layout_constraintStart_toEndOf="@id/checkbox_apiary_select"
             app:layout_constraintEnd_toStartOf="@id/image_button_edit"
+            app:layout_constraintStart_toEndOf="@id/checkbox_apiary_select"
+            app:layout_constraintTop_toBottomOf="@id/text_view_apiary_name"
             tools:text="Kyiv Oblast, Ukraine" />
+
+        <TextView
+            android:id="@+id/text_view_apiary_type"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:textAppearance="?attr/textAppearanceBody2"
+            android:textColor="?android:attr/textColorSecondary"
+            app:layout_constraintStart_toEndOf="@id/checkbox_apiary_select"
+            app:layout_constraintTop_toBottomOf="@id/text_view_apiary_location"
+            tools:text="Stationary" />
 
         <TextView
             android:id="@+id/text_view_number_of_hives"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:textAppearance="?attr/textAppearanceBody2"
             android:textColor="?android:attr/textColorSecondary"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@id/text_view_apiary_location"
             app:layout_constraintStart_toEndOf="@id/checkbox_apiary_select"
+            app:layout_constraintTop_toBottomOf="@id/text_view_apiary_type"
             tools:text="Hives: 10" />
 
         <ImageButton
@@ -68,12 +78,12 @@
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:background="?attr/selectableItemBackgroundBorderless"
-            android:src="@drawable/ic_edit"
-            app:tint="?attr/colorAccent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             android:contentDescription="@string/content_description_edit_apiary"
-            android:visibility="visible" />
+            android:src="@drawable/ic_edit"
+            android:visibility="visible"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:tint="?attr/colorAccent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </com.google.android.material.card.MaterialCardView>
