--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -7,6 +7,11 @@
         android:title="Home" />
 
     <item
+        android:id="@+id/queenRearingFragment"
+        android:icon="@drawable/ic_queen"
+        android:title="Queen Rearing" />
+
+    <item
         android:id="@+id/todoListFragment"
         android:icon="@drawable/ic_todo"
         android:title="To-Do" />
